# python_pro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: lesson_10.py  lesson_11.py  lesson_12.py  lesson_15_server.py  lesson_5.py  lesson_6.py  lesson_7_team.py  lesson_9.py
